Feat: enhance category and product management; refactor response models, integrate MapStruct for mapping, and improve user profile update functionality